...

      <Text style={styles.title}>Welcome to Notes App</Text>
      <Text style={styles.subTitle}>
        Create and manage your notes effortlessly
      </Text>
      <Pressable
        testID='home-get-started'
        style={({ pressed }) => ({
          ...buttonStyles.button,
          opacity: pressed ? 0.7 : 1,
        })}
        onPress={() => {
          try {
...
          } catch {
            // Do nothing if haptics fail
          }
          router.push('/notes');
        }}
      >
        <Text style={buttonStyles.buttonText}>Get Started</Text>
      </Pressable>
      {__DEV__ && (
        <Pressable
          testID='home-storybook'
          style={({ pressed }) => ({
            ...buttonStyles.button,
...
